# Translationrecordingtool

./: .brooks-lint-history.json  .gitignore  AGENTS.md  README.md  azure-signup.md  package-lock.json  package.json  playwright.config.ts  translator-page-deep.md  translator-page.md  vitest.config.ts
.playwright-mcp/: page-2026-04-19T17-25-58-955Z.yml  page-2026-04-19T17-26-25-624Z.yml
claudedocs/: workflow_project_audit_2026-04-25.md
docs/: architecture-translation-workflow.md  dev-startup.md  implementation-plan-phase-1.md  plan-phase1-1-save-translation.md  prd-phase-1-service-consolidation.md  prd-phase1-service-layer-consolidation.md
scripts/: build_dictionary.py  build_ocr_sidecar.ps1  paddle_ocr_server.py  prepare_ocr_models.ps1  prepare_ort_runtime.ps1  verify-s06.mjs
src/: App.spec.ts  App.vue  main.ts  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.ocr-lite.conf.json  tauri.ocr-native.conf.json  tauri.ocr-sidecar.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: ocr_profile_bench.rs  test_api.rs
src-tauri/resources/ocr-models/: README.md
src-tauri/src/: app_state.rs  clipboard.rs  database.rs  http_client.rs  lib.rs  local_dictionary.rs  logger.rs  main.rs  native_ocr.rs  ocr.rs  ocr_contracts.rs  ocr_service.rs  popup_window.rs  screenshot.rs  selection_reader.rs  settings.rs  shortcut_handler.rs  translation_domain.rs  translation_flow.rs  translation_workflow.rs  translator.rs
src-tauri/src/screenshot/: webview.rs  windows.rs
src-tauri/tests/: local_dictionary_tests.rs  popup_window_contract_tests.rs
(+67 files in other folders)
